@@ -18,6 +18,7 @@ Changelog for 1.4.7
 * Fixed 1227, 1252, added batch printing via batches (Chris T)
 * Fixed bug 1275, post error due to trying to double encode arry (Chris T)
 * Fixing position of returns checkbox on account screen (Chris T)
+* Fixed bug 1278, multi-language templates not stored in db (Chris T)
 
 Chris T is Chris Travers
 
